# hamster_server

./: README.md
hamster_mapping_controller/: .gitignore  CMakeLists.txt  package.xml
hamster_mapping_controller/launch/: client_side.launch  save_map.launch  server_side.launch
hamster_mapping_controller/src/: client_side.cpp  server_side.cpp
hamster_server_launch/: CMakeLists.txt  package.xml
hamster_server_launch/launch/: multimaster.launch  server.launch
hamster_server_launch/maps/: cogniteam.yaml  indoor.pgm  indoor.pstn  indoor.yaml  outdoor.pgm  outdoor.pstn  outdoor.yaml
hamster_server_launch/rqt/: hamster.perspective
hamster_server_launch/rviz/: hamsters.rviz  ukf_test.rviz
mrm_control_panel/: CMakeLists.txt
mrm_control_panel/include/mrm_control_panel/: MapWidget.h  RobotGraphicsItem.h  RobotWidget.h  TeleoperatorInstanceWidget.h  VideoWidget.h
mrm_control_panel/launch/: record_ui.launch  remote.launch
mrm_control_panel/src/mrm_control_panel/: ControlPlugin.cpp  ControlWidget.cpp  MapGraphicsItem.cpp  MapWidget.cpp  RobotGraphicsItem.cpp  RobotWidget.cpp  TeleoperatorInstanceWidget.cpp  VideoWidget.cpp
mrm_control_panel/ui/: mrm_map_widget.ui  mrm_robot_widget.ui  mrm_video_widget.ui
